--- a/api.html
+++ b/api.html
@@ -477,7 +477,7 @@
                 <p><a href="https://wa.me/14157024714">Botz</a></p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/place/Jl.+Kp.+Pedaengan,+Penggilingan,+Kec.+Cakung,+Kota+Jakarta+Timur,+Daerah+Khusus+Ibukota+Jakarta+13940/@-6.190882,106.9348775,17z/data=!3m1!4b1!4m5!3m4!1s0x2e698b3e3dea98b5:0x165fa5effc974b1b!8m2!3d-6.1908873!4d106.9370662?hl=id" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
