--- a/api.html
+++ b/api.html
@@ -477,7 +477,7 @@
                 <p><a href="https://wa.me/14157024714">Botz</a></p>
               </div>
 
-              <iframe src="https://www.google.com/maps/place/Jl.+Kp.+Pedaengan,+Penggilingan,+Kec.+Cakung,+Kota+Jakarta+Timur,+Daerah+Khusus+Ibukota+Jakarta+13940/@-6.190882,106.9348775,17z/data=!3m1!4b1!4m5!3m4!1s0x2e698b3e3dea98b5:0x165fa5effc974b1b!8m2!3d-6.1908873!4d106.9370662?hl=id" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://maps.google.com/maps?q=penggilingan&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
