--- a/index.html
+++ b/index.html
@@ -7,30 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Personal Website Romi Muharom Romi Muharom." />
     <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate" />
-    <meta name="author" content="Romi Muharom" />
-    <title>ROMI MUHAROM - Home</title>
+    <meta name="author" content="Zeeone Ofc" />
+    <title>Alphabot - Home</title>
     <meta property="og:site_name" name="og:site_name" content="Romi Muharom" />
     <meta property="og:title" name="og:title" content="Romi Muharom" />
     <meta property="og:url" name="og:url" content="https://wa.me/6289638023602/" />
-    <meta property="og:image" name="og:image" content="https://telegra.ph/file/7e4ecd50e60731dede57e.jpg" />
+    <meta property="og:image" name="og:image" content="https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg" />
     <meta property="og:description" name="og:description" content="Personal Website Romi Muharom." />
-    <link rel="apple-touch-icon" sizes="57x57" href="https://telegra.ph/file/7e4ecd50e60731dede57e.jpg" />
-    <link rel="apple-touch-icon" sizes="60x60" href="https://telegra.ph/file/7e4ecd50e60731dede57e.jpg" />
-    <link rel="apple-touch-icon" sizes="72x72" href="https://telegra.ph/file/7e4ecd50e60731dede57e.jpg" />
-    <link rel="apple-touch-icon" sizes="76x76" href="https://telegra.ph/file/7e4ecd50e60731dede57e.jpg" />
-    <link rel="apple-touch-icon" sizes="114x114" href="https://telegra.ph/file/7e4ecd50e60731dede57e.jpg" />
-    <link rel="apple-touch-icon" sizes="120x120" href="https://telegra.ph/file/7e4ecd50e60731dede57e.jpg" />
-    <link rel="apple-touch-icon" sizes="144x144" href="https://telegra.ph/file/7e4ecd50e60731dede57e.jpg" />
-    <link rel="apple-touch-icon" sizes="152x152" href="https://telegra.ph/file/7e4ecd50e60731dede57e.jpg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="https://telegra.ph/file/7e4ecd50e60731dede57e.jpg" />
+    <link rel="apple-touch-icon" sizes="57x57" href="https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg" />
+    <link rel="apple-touch-icon" sizes="60x60" href="https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg" />
+    <link rel="apple-touch-icon" sizes="72x72" href="https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg" />
+    <link rel="apple-touch-icon" sizes="76x76" href="https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg" />
+    <link rel="apple-touch-icon" sizes="114x114" href="https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg" />
+    <link rel="apple-touch-icon" sizes="120x120" href="https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg" />
+    <link rel="apple-touch-icon" sizes="144x144" href="https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg" />
+    <link rel="apple-touch-icon" sizes="152x152" href="https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg" />
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="192x192" href="https://telegra.ph/file/7e4ecd50e60731dede57e.jpg" />
-    <link rel="icon" type="image/png" sizes="32x32" href="https://telegra.ph/file/7e4ecd50e60731dede57e.jpg" />
-    <link rel="icon" type="image/png" sizes="96x96" href="https://telegra.ph/file/7e4ecd50e60731dede57e.jpg" />
-    <link rel="icon" type="image/png" sizes="16x16" href="https://telegra.ph/file/7e4ecd50e60731dede57e.jpg" />
+    <link rel="icon" type="image/png" sizes="192x192" href="https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg" />
+    <link rel="icon" type="image/png" sizes="96x96" href="https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg" />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="https://telegra.ph/file/7e4ecd50e60731dede57e.jpg" />
-    <link rel="canonical" href="https://rominaru.github.io/" />
+    <meta name="msapplication-TileImage" content="https://telegra.ph/file/75c0cb16b38f34a3d3a0b.jpg" />
+    <link rel="canonical" href="https://zeeoneofc125.github.io/" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="/static/css/home.css" />
 </head>
