--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Personal Website Romi Muharom Romi Muharom." />
+    <meta name="description" content="Personal Website." />
     <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate" />
     <meta name="author" content="Zeeone Ofc" />
     <title>Alphabot - Home</title>
@@ -51,7 +51,7 @@
         <p>
             <div class="phone">
                  <i class="icon-whatsapp"></i>                
-                <p><a href="https://wa.me/6289638023602">Rominaru</a></p>
+                <p><a href="https://wa.me/6289638023602">ZeeoneOfc</a></p>
               </div>
         </p>
     </div>
